# xi-alpha

./: .gitignore  README.md  main.py  pyproject.toml  xi-alpha.toml
docs/: architecture.md  xi-alpha.md
src/xialpha/: config.py  display.py  main.py
src/xialpha/backend/: __init__.py  auto.py  base.py  numpy_backend.py
src/xialpha/backtest/: __init__.py  batch.py  engine.py  metrics.py
src/xialpha/data/: __init__.py  cache.py  loader.py
src/xialpha/factor/: __init__.py  compiler.py  library.py  operators.py
src/xialpha/mining/: __init__.py  base.py  gp_miner.py  llm_miner.py  nsga.py  prompts.py  tree.py
src/xialpha/report/: __init__.py  summary.py
tests/: test_classic.py  test_engine.py  test_operators.py
