[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xi-alpha"
version = "0.1.0"
description = "Vectorized factor research engine for A-share markets"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "akshare>=1.12",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
xi-alpha = "xialpha.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xialpha"]

[tool.pytest.ini_options]
testpaths = ["tests"]
